# eventix

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE-MIT  README.md  TESTING.md  TODO.md  llms.txt  rustfmt.toml
.github/workflows/: ci.yml  release.yml  rust.yml
benches/: performance.rs
examples/: basic.rs  calendar_views.rs  gap_validation.rs  ics_export.rs  json_web.rs  recurrence.rs  timezone_ics_export.rs
src/: calendar.rs  error.rs  event.rs  gap_validation.rs  ics.rs  lib.rs  recurrence.rs  timezone.rs  views.rs
tests/: booking_status_tests.rs  calendar_view_tests.rs  gap_validation_tests.rs  property_tests.rs  timezone_ics_tests.rs
tests/common/: mod.rs
usage-examples/: .gitignore  Cargo.toml  README.md
usage-examples/src/: booking_workflow.rs  json_web.rs  main.rs  v040_features.rs
