[package]
name = "eventix"
version = "0.3.1"
edition = "2021"
authors = ["Raj Sarkar <ariajsarkar@gmail.com>"]
description = "High-level calendar & recurrence crate with timezone-aware scheduling, exceptions, and ICS import/export"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AriajSarkar/eventix"
readme = "README.md"
homepage = "https://github.com/AriajSarkar/eventix"
keywords = ["calendar", "scheduling", "booking", "availability", "ics"]
categories = ["date-and-time"]
exclude = ["usage-examples/"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
rrule = "0.14"
icalendar = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0"
proptest = "1.0"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
